# eeg-cognitive-decoding

./: .gitignore  Makefile  README.md  REPORT.md  pyproject.toml  requirements.txt
eeg_cognitive/: __init__.py  data.py  evaluate.py  preprocess.py  viz.py
eeg_cognitive/models/: __init__.py  eegnet.py  fbcsp.py
notebooks/: 01_introduction.ipynb  02_synthetic_data.ipynb  03_preprocessing.ipynb  04_fbcsp.ipynb  05_eegnet.ipynb  06_results.ipynb  07_demo.ipynb  build_all_notebooks.py
results/: mental_arithmetic_eegnet.json  mental_arithmetic_fbcsp.json  motor_imagery_eegnet.json  motor_imagery_fbcsp.json  results.csv
scripts/: generate_figures.py  generate_styled_figures.py  run_all_experiments.py  run_experiment.py
